[gd_scene load_steps=11 format=3 uid="uid://cr4sh2ng3up48"]

[ext_resource type="Script" path="res://scripts/riddle_main.gd" id="1_sljnh"]
[ext_resource type="FontFile" uid="uid://d32kytgakur35" path="res://assets/Fonts/Minecraft.ttf" id="2_6a33e"]
[ext_resource type="Theme" uid="uid://disui0t82w0ab" path="res://themes/main_riddle_part.tres" id="2_sgwna"]
[ext_resource type="Texture2D" uid="uid://bkt1p5ovufceo" path="res://assets/buttons/wrench_instruction_button.png" id="4_pveda"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvoly"]
bg_color = Color(0.780147, 0.746093, 0.687289, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.685641, 0.550071, 0.393734, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1r8f"]
bg_color = Color(0.458405, 0.458405, 0.458405, 0.882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tngd"]
bg_color = Color(0.64832, 0.534511, 0.412864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4d8fk"]
bg_color = Color(0.287113, 0.304372, 0.478836, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.0745098, 0.0862745, 0.239216, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqn50"]
bg_color = Color(0.806859, 0.740631, 0.640039, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.439216, 0.34902, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nrjxp"]

[node name="Riddle_Main" type="Node2D"]
top_level = true
script = ExtResource("1_sljnh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -228.0
offset_right = 264.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.309804)

[node name="cost_modal" type="HBoxContainer" parent="."]
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="cost_panel" type="Panel" parent="cost_modal"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wvoly")

[node name="MarginContainer" type="MarginContainer" parent="cost_modal/cost_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -56.0
offset_right = 112.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="cost_container" type="HBoxContainer" parent="cost_modal/cost_panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="cost_modal/cost_panel"]
layout_mode = 2
offset_left = 95.0
offset_top = 165.0
offset_right = 155.0
offset_bottom = 188.0
size_flags_vertical = 4

[node name="own_kp_label" type="Label" parent="cost_modal/cost_panel/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.55261, 0.837715, 0.855524, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_fonts/font = ExtResource("2_6a33e")
theme_override_font_sizes/font_size = 12

[node name="riddle_modal" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(128, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -208.0
offset_right = 244.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_h1r8f")

[node name="MarginContainer" type="MarginContainer" parent="riddle_modal"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="riddle_container" type="VBoxContainer" parent="riddle_modal/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="timer_panel" type="Panel" parent="riddle_modal/MarginContainer/riddle_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4tngd")

[node name="MarginContainer" type="MarginContainer" parent="riddle_modal/MarginContainer/riddle_container/timer_panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_right = 89.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 0

[node name="riddle_timer" type="Label" parent="riddle_modal/MarginContainer/riddle_container/timer_panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6a33e")
theme_override_font_sizes/font_size = 29
text = "10:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="parts_panel" type="Panel" parent="riddle_modal/MarginContainer/riddle_container"]
clip_contents = true
custom_minimum_size = Vector2(360, 80)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_4d8fk")

[node name="MarginContainer" type="MarginContainer" parent="riddle_modal/MarginContainer/riddle_container/parts_panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -26.0
offset_right = 250.0
offset_bottom = 26.0
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="parts_container" type="HBoxContainer" parent="riddle_modal/MarginContainer/riddle_container/parts_panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="riddle_modal/MarginContainer/riddle_container/parts_panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -35.0
offset_right = -4.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 2

[node name="instructions_button" type="Button" parent="riddle_modal/MarginContainer/riddle_container/parts_panel/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_sgwna")
theme_override_icons/icon = ExtResource("4_pveda")
text = "
"
alignment = 2
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="riddle_modal/MarginContainer/riddle_container/parts_panel/MarginContainer2/instructions_button"]
layout_mode = 2
offset_left = 19.0
offset_top = 25.0
offset_right = 68.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6a33e")
theme_override_font_sizes/font_size = 9
text = "Repair
nstructions"
horizontal_alignment = 1
vertical_alignment = 3

[node name="key_for_instructions" type="Label" parent="riddle_modal/MarginContainer/riddle_container/parts_panel/MarginContainer2/instructions_button"]
modulate = Color(1, 1, 1, 0.376471)
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 61.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("2_6a33e")
theme_override_font_sizes/font_size = 9
text = "( HotKey I )"

[node name="keys_panel" type="Panel" parent="riddle_modal/MarginContainer/riddle_container"]
clip_contents = true
custom_minimum_size = Vector2(360, 80)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_kqn50")

[node name="MarginContainer" type="MarginContainer" parent="riddle_modal/MarginContainer/riddle_container/keys_panel"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 52.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="keys_container" type="HBoxContainer" parent="riddle_modal/MarginContainer/riddle_container/keys_panel/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="MarginContainer2" type="MarginContainer" parent="riddle_modal/MarginContainer/riddle_container/keys_panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -52.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="keys_label" type="Label" parent="riddle_modal/MarginContainer/riddle_container/keys_panel/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6a33e")
theme_override_font_sizes/font_size = 20

[node name="finish_container" type="HBoxContainer" parent="riddle_modal/MarginContainer/riddle_container"]
visible = false
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="cancel2" type="Button" parent="riddle_modal/MarginContainer/riddle_container/finish_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "cancel
"

[node name="Save_Label" type="Label" parent="riddle_modal/MarginContainer/riddle_container"]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_nrjxp")
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
text = "Continue"
